Using ibus causes password fields to constantly lose and regain focus
Using flashback 3.30.0-1ubuntu6
When I use iBus and focus on a password field in Firefox, the password field will flicker between losing and having focus, and the ibus indicator will disappear/appear.
I believe gnome-shell had the same bug, which was fixed. Please see this iBus bug which contains a fix to gnome-shell: iBus issue #2002